2007-11-16  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/Makefile.am (flumotion_PYTHON): 
	* flumotion/test/Makefile.am: (EXTRA_DIST): 
	Update these, add the new files in the repo.

	* data/glade/wizard_encoding.glade: Remove parts which are going to 
	be overwritten in runtime
	* data/glade/wizard_testsource.glade: Connect to two more signals
	* flumotion/test/test_wizard_models.py:
	* flumotion/wizard/models.py:
	* flumotion/wizard/steps.py:
	* flumotion/wizard/wizard.py:
	First step of MVC migration of the wizard.
	Add a Flow and Component model, start using them
	in parts of the wizard, but don't use them to do much interesting.

	Make some of the indivudal steps create the upcoming step instead of just
	returning the name, this allows us to pass the model on to the next step. 

2007-11-16  Johan Dahlin  <johan@gnome.org>

	* data/glade/wizard_consumption.glade: Set the audio/video only
	sub checkbuttons to true by default

	* flumotion/wizard/steps.py:
	Remove unused imports, refactor method order in the overlay step,
	make a few methods private. Make sure that all audio sources inherit
	from the audio source step.
	(ProductionStep.get_next): Remove duplicated get_next()

	* flumotion/wizard/wizard.py (BasicScenario.__init__):
	Rename all step classes to end with Step
	
	* flumotion/wizard/wizard.py (BasicScenario.__init__): Allow us to
	return a WizardStep instance instead of a string in get_next()
	methods.

	* flumotion/ui/fgtk.py (FCheckButton): Remove the __nonzero__
	hack.

	* data/glade/admin.glade: center the window when displaying it
	for the first time.

2007-11-15  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/steps.py (Consumption.activated, 
	Consumption.get_next): Continue refactoring, avoids plenty
	of duplication here
	(Production.verify): Revert the hasattr change

2007-11-15  Michael Smith <msmith@fluendo.com>

	* flumotion/admin/gtk/parts.py:
	  Remove CPU column, since we no longer have CPU in the jobState, and